--- a/html/manifest.json
+++ b/html/manifest.json
@@ -8,9 +8,69 @@
     "scope": "(./)",
     "icons": [
         {
-            "src": "../imgs/icon.png",
-            "sizes": "72x72",
-            "type": "image/png"
+          "src": "../imgs/icon/android-icon-192x192-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "192x192"
+        },
+        {
+          "src": "../imgs/icon/apple-icon-180x180-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "180x180"
+        },
+        {
+          "src": "../imgs/icon/apple-icon-152x152-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "152x152"
+        },
+        {
+          "src": "../imgs/icon/apple-icon-144x144-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "144x144"
+        },
+        {
+          "src": "../imgs/icon/apple-icon-120x120-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "120x120"
+        },
+        {
+          "src": "../imgs/icon/apple-icon-114x114-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "114x114"
+        },
+        {
+          "src": "../imgs/icon/favicon-96x96-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "96x96"
+        },
+        {
+          "src": "../imgs/icon/apple-icon-76x76-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "76x76"
+        },
+        {
+          "src": "../imgs/icon/apple-icon-72x72-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "72x72"
+        },
+        {
+          "src": "../imgs/icon/apple-icon-60x60-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "60x60"
+        },
+        {
+          "src": "../imgs/icon/apple-icon-57x57-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "57x57"
+        },
+        {
+          "src": "../imgs/icon/favicon-32x32-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "32x32"
+        },
+        {
+          "src": "../imgs/icon/favicon-16x16-seochecker-manifest-6316.png",
+          "type": "image/png",
+          "sizes": "16x16"
         }
-    ]
+      ]
 }
